--- a/ui_main.ui
+++ b/ui_main.ui
@@ -1747,7 +1747,7 @@ QPushButton:pressed {
                    <string notr="true">background: transparent;</string>
                   </property>
                   <property name="currentIndex">
-                   <number>1</number>
+                   <number>0</number>
                   </property>
                   <widget class="QWidget" name="page_home">
                    <layout class="QVBoxLayout" name="verticalLayout_10">
@@ -1773,36 +1773,42 @@ border-radius: 5px;</string>
                        <item>
                         <layout class="QGridLayout" name="gridLayout_4">
                          <property name="leftMargin">
-                          <number>150</number>
+                          <number>0</number>
                          </property>
                          <property name="rightMargin">
-                          <number>150</number>
+                          <number>0</number>
                          </property>
                          <property name="bottomMargin">
-                          <number>250</number>
+                          <number>0</number>
                          </property>
                          <property name="horizontalSpacing">
                           <number>6</number>
                          </property>
                          <property name="verticalSpacing">
-                          <number>20</number>
+                          <number>0</number>
                          </property>
                          <item row="0" column="0">
-                          <widget class="QLabel" name="label_6">
+                          <widget class="QLabel" name="label_home_main">
                            <property name="font">
                             <font>
                              <family>Segoe UI</family>
-                             <pointsize>40</pointsize>
+                             <pointsize>20</pointsize>
                             </font>
                            </property>
                            <property name="styleSheet">
                             <string notr="true"/>
                            </property>
                            <property name="text">
-                            <string>HOME</string>
+                            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Платформа &lt;span style=&quot; font-weight:600;&quot;&gt;STUDY:&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Создана для обеспечения дистанционного тестирования учащихся, в связи с &lt;span style=&quot; font-weight:600;&quot;&gt;короновирусной инфекцией. &lt;br/&gt;&lt;/span&gt;Для получения &lt;span style=&quot; font-weight:600;&quot;&gt;логина&lt;/span&gt; и &lt;span style=&quot; font-weight:600;&quot;&gt;пароля&lt;/span&gt;, обратиться к &lt;span style=&quot; font-weight:600;&quot;&gt;системному администратору&lt;/span&gt;.&lt;/p&gt;&lt;p&gt;Контакты - ...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                           </property>
+                           <property name="scaledContents">
+                            <bool>false</bool>
                            </property>
                            <property name="alignment">
-                            <set>Qt::AlignCenter</set>
+                            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+                           </property>
+                           <property name="wordWrap">
+                            <bool>true</bool>
                            </property>
                           </widget>
                          </item>
